# algonauts23

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
algonauts23/: __init__.py  features.py  parcellation.py  resample.py  space.py  surface.py  utils.py  visualize.py
algonauts23/models/: __init__.py  group_linear.py  registry.py  trunks.py
config/: phase1_head_only.yaml  phase2_finetune.yaml
dataset/: README.md  download_data.sh  generate_dataset.py  generate_splits.py
scripts/: fit_group_pca.py  sweep_group_encoder.py  train_group_encoder.py  zip_submission.sh
tests/: test_features.py  test_resampler.py  test_surface.py
